--- a/MortyApp/General/UI/CollectionCells/ListDetailCell.xib
+++ b/MortyApp/General/UI/CollectionCells/ListDetailCell.xib
@@ -17,28 +17,28 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YK3-ZV-iO5">
-                        <rect key="frame" x="0.0" y="0.0" width="192" height="330"/>
+                        <rect key="frame" x="5" y="0.0" width="182" height="330"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderImage" translatesAutoresizingMaskIntoConstraints="NO" id="yiW-9I-7o7">
-                                <rect key="frame" x="5" y="5" width="182" height="200"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderImage" translatesAutoresizingMaskIntoConstraints="NO" id="yiW-9I-7o7">
+                                <rect key="frame" x="5" y="5" width="172" height="200"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="7dW-p2-Whu"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TcB-o1-Fby">
-                                <rect key="frame" x="16" y="217" width="160" height="14.333333333333343"/>
+                                <rect key="frame" x="16" y="217" width="150" height="14.333333333333343"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Species" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dAZ-yM-U8u">
-                                <rect key="frame" x="16" y="243.33333333333334" width="160" height="18.000000000000028"/>
+                                <rect key="frame" x="16" y="243.33333333333334" width="150" height="18.000000000000028"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.50980392159999999" green="0.7843137255" blue="0.27058823529999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="TcB-o1-Fby" secondAttribute="trailing" constant="16" id="A9p-RI-h5I"/>
                             <constraint firstAttribute="trailing" secondItem="dAZ-yM-U8u" secondAttribute="trailing" constant="16" id="Agb-6y-Hse"/>
@@ -55,15 +55,16 @@
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="YK3-ZV-iO5" secondAttribute="trailing" id="06C-0F-oBA"/>
+                <constraint firstAttribute="trailing" secondItem="YK3-ZV-iO5" secondAttribute="trailing" constant="5" id="06C-0F-oBA"/>
                 <constraint firstItem="YK3-ZV-iO5" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="adu-ia-Net"/>
-                <constraint firstItem="YK3-ZV-iO5" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="y2X-4s-4gL"/>
+                <constraint firstItem="YK3-ZV-iO5" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="y2X-4s-4gL"/>
                 <constraint firstAttribute="bottom" secondItem="YK3-ZV-iO5" secondAttribute="bottom" id="zDw-IR-rdl"/>
             </constraints>
             <connections>
                 <outlet property="imageView" destination="yiW-9I-7o7" id="8iz-ti-0xA"/>
                 <outlet property="nameLabel" destination="TcB-o1-Fby" id="Lbf-QV-H2v"/>
                 <outlet property="speciesLabel" destination="dAZ-yM-U8u" id="VCk-Ej-Kuh"/>
+                <outlet property="vista" destination="YK3-ZV-iO5" id="mD2-fc-4pY"/>
             </connections>
             <point key="canvasLocation" x="-154" y="-12"/>
         </collectionViewCell>
