--- a/MortyApp/Module/View/ListSection/ListSectionViewController.xib
+++ b/MortyApp/Module/View/ListSection/ListSectionViewController.xib
@@ -30,7 +30,7 @@
                 </collectionView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" red="0.50980392159999999" green="0.7843137255" blue="0.27058823529999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="pBA-gh-Pjd" secondAttribute="trailing" id="Ovv-Mv-Ok6"/>
                 <constraint firstItem="pBA-gh-Pjd" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="egw-vo-n29"/>
